Probando Subida Github

--- a/css/sytle.css
+++ b/css/sytle.css
@@ -11,7 +11,7 @@ img {
 
 body {
     background-color: rgb(250, 235, 237);
-
+    padding: 1rem;
 }
 
 .title {
@@ -19,26 +19,21 @@ body {
     padding: 2rem;
 }
 
-.formulario {
-    padding: 4rem;
-    display: inline
-}
-
 .carga {
-    padding: 15px;
+    padding: 20px;
 }
 
 .fecha {
-    width: 100px;
+    width: 90px;
 }
 
 .cliente {
-    width: 200px;
+    width: 400px;
 }
 
 .detalle {
 
-    width: 350px;
+    width: 550px;
 
 }
 
@@ -46,48 +41,57 @@ body {
     width: 50px;
 }
 
-.valorun {
+.ingreso {
+    width: 50px;
+}
+
+.egreso {
     width: 50px;
 }
 
 .valortot {
     width: 90px;
+    align-items: center;
+}
+
+.agregaritem {
+    width: 85px;
+    background-color: rgb(157, 129, 129);
 }
 
 .parrafo1 {
     padding: 15px;
 }
 
-.ingresobtn {
-    padding: 10px;
-
-}
-
-.egresobtn {
-    padding: 10px;
-
-}
-
-.botones {
-    display: flex;
-    padding: 1rem;
-}
-
-.tabla {
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-style: double;
-    
-}
-
 th {
     border-style: double;
     background-color: pink;
+    font-size: 18px;
+    padding: 0.25rem;
+
 }
 
-tr {
+.planilla {
+    padding: 2rem;
+    background-color: rgb(234, 250, 233);
+    text-align: center;
+}
+
+.centrado {
+    display: flex;
+    flex-direction: column;
     border-style: double;
-    background-color: blueviolet;
+    background-color: rgb(189, 187, 187);
+    align-items: center;
+}
+
+.totales {
+    border-style: double;
+    font-size: 20px;
+}
+
+.cuadro-totales {
+    background-color: rgb(143, 167, 159);
+    padding: 4rem;
+    text-align: right;
 }
